--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
@@ -54,27 +54,11 @@
 					<ul id="menu">
 						<li><button class="load">LOAD</button></li>
 						<li><button class="save">SAVE</button></li>
-						<li><button class="options" type="button" 
-				onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
+						<li><button class="options" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
 					</ul>
 				</div>
 			</nav>
-			<!--
-			
-			
-			
-			
-			
-			
-										<p> PLANSZA </p>
-			
-			
-			
-			
-			
-			
-			
-			-->
+			<div id="gridContainer"></div>
 			<form>
 				<div id="FooterOptions">
 					<button class="OneMove">1 Move</button>
@@ -86,15 +70,17 @@
 					<br>
 					Width:<span id="valuesX"></span> <input class="slider2" type="range" id="widthX" value="50" min="5" max="100">
 							
-					<select name="interval">
+					<select id="interval" name="interval">
 						<option value="100">1/8 sec</option>
 						<option value="250">1/4 sec</option>
 						<option value="500">1/2 sec</option>
-						<option value="1000" selected="selected">1 sec</option>
+						<option value="1000">1 sec</option>
 						<option value="2000">2 sec</option>
 					</select>
 					
-					<input type="button" onclick="myFunction()" value="START"> 
+					<input id="start" type="button"  value="START"> 
+					<input id="clear" type="button"  value="CLEAR"> 
+					<input id="random" type="button"  value="RANDOM"> 
 					<br>
 					<script>
 						var slider1 = document.getElementById("heightY");
@@ -128,6 +114,6 @@
 		<div id="MainLoad">
 
 		</div>
-
+		<script src="./JS/gameoflife.js"></script>
 	</body>
 </html>
