Błąd podłączenia CSS i JS

--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
@@ -114,6 +114,6 @@
 		<div id="MainLoad">
 
 		</div>
-		<script src="./JS/gameoflife.js"></script>
+		<script src="../JS/gameoflife.js"></script>
 	</body>
 </html>
