--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="../JS/gameoflife.js"></script>
 	</head>
 	<body>
 
@@ -54,7 +55,8 @@
 					<ul id="menu">
 						<li><button class="load">LOAD</button></li>
 						<li><button class="save">SAVE</button></li>
-						<li><button class="options" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
+						<li><button class="options" type="button" onclick="document.getElementById('MainGame').style.display = 'none',
+									document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
 					</ul>
 				</div>
 			</nav>
@@ -70,17 +72,17 @@
 					<br>
 					Width:<span id="valuesX"></span> <input class="slider2" type="range" id="widthX" value="50" min="5" max="100">
 							
-					<select id="interval" name="interval">
-						<option value="100">1/8 sec</option>
+					<select id="interval" name="interval" onchange="rt(this.value)">
+						<option value="100">1/10 sec</option>
 						<option value="250">1/4 sec</option>
 						<option value="500">1/2 sec</option>
 						<option value="1000">1 sec</option>
 						<option value="2000">2 sec</option>
 					</select>
 					
-					<input id="start" type="button"  value="START"> 
-					<input id="clear" type="button"  value="CLEAR"> 
-					<input id="random" type="button"  value="RANDOM"> 
+					<input id="start" type="button" value="START"> 
+					<input id="clear" type="button" value="CLEAR"> 
+					<input id="random" type="button" value="RANDOM"> 
 					<br>
 					<script>
 						var slider1 = document.getElementById("heightY");
@@ -114,6 +116,5 @@
 		<div id="MainLoad">
 
 		</div>
-		<script src="../JS/gameoflife.js"></script>
 	</body>
 </html>
