--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -63,10 +63,10 @@
 			<div id="gridContainer"></div>
 			<form>
 				<div id="FooterOptions">
-					<button class="OneMove">1 Move</button>
-					<button class="FiveMoves">5 Moves</button>
-					<button class="TenMoves">10 Moves</button>
-					<button class="FiftyMoves">50 Moves</button>
+					<button id="oneMove" class="OneMove">1 Move</button>
+					<button id="fiveMoves" class="FiveMoves">5 Moves</button>
+					<button id="tenMoves" class="TenMoves">10 Moves</button>
+					<button id="fiftyMoves" class="FiftyMoves">50 Moves</button>
 					<br>
 					Height:<span id="valuesY"></span> <input class="slider1" type="range" id="heightY" value="50" min="5" max="100" onchange="rc()">
 					<br>
