--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -23,7 +23,7 @@
 					<span></span>
 					<ul id="menu">
 						<li><button class="loadMenu">LOAD</button></li>
-						<li><button class="saveMenu">SAVE</button></li>
+						<li><button class="saveMenu"onclick="saveButton(table)">SAVE</button></li>
 						<li><button class="optionsMenu" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
 					</ul>
 				</div>
