Poprawione buttony i error z validatora

--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Gra w życie Krystian Barczak, Krzysztof Dragon, Szymon Babula, Aleksander Boronowski</title>
 	
 	</head>
 	<body>
@@ -51,10 +52,12 @@
 						<option value="2000">2 sec</option>
 					</select>
 					
+				<div id="bottomButtons">
 					<input id="start" type="button" value="START"> 
 					<input id="clear" type="button" value="CLEAR"> 
 					<input id="random" type="button" value="RANDOM"> 
 					<br>
+				</div>
 				</div>
 		</div>
 		<div id="MainInstruction">
