--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Gra w życie Krystian Barczak, Krzysztof Dragon, Szymon Babula, Aleksander Boronowski</title>
-	
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
 		<script src="../JS/gameoflife.js"></script>
@@ -17,17 +17,19 @@
 
 		<div id="MainGame">
 			<nav role="navigation">
-				<div id="menuToggle">
-					<input type="checkbox" />
-					<span></span>
-					<span></span>
-					<span></span>
-					<ul id="menu">
-						<li><button class="loadMenu">LOAD</button></li>
-						<li><button class="saveMenu">SAVE</button></li>
-						<li><button class="optionsMenu" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
-					</ul>
+				<span id="optionsSpan">Options</span>
+				<div class="ps" style="display: none" id="menuToggle">
+						<button class="loadMenu">LOAD</button><br>
+						<button class="saveMenu">SAVE</button><br>
+						<button class="optionsMenu" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline',
+						document.getElementById('menuToggle').style.display = 'none'">QUIT</button>
+						<br>
 				</div>
+				<script>
+					$("span").click(function () {
+					$(".ps").toggle("slow");
+					});
+				</script>
 			</nav>
 			<div id="gridContainer"></div>
 				<div id="FooterOptions">
