--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -61,7 +61,7 @@
 				</div>
 				</div>
 		</div>
-		<div id="MainInstruction">
+		<div id="MainInstruction" class="MainInstruction">
 			<p>Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się)</p>
 			
 			<p>Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p>
