--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -22,7 +22,7 @@
 					<span></span>
 					<span></span>
 					<ul id="menu">
-						<li><button class="loadMenu">LOAD</button></li>
+						<li><button class="loadMenu"onclick="loadTable()">LOAD</button></li>
 						<li><button class="saveMenu"onclick="saveButton(table)">SAVE</button></li>
 						<li><button class="optionsMenu" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
 					</ul>
