--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -37,32 +37,30 @@
 			</nav>
 			<div id="gridContainer"></div>
 				<div id="FooterOptions">
-					<button id="oneMove" class="OneMove" value="1" onclick="stepButton(value)">1 Move</button>
-					<button id="fiveMoves" class="FiveMoves" value="5" onclick="stepButton(value)">5 Moves</button>
-					<button id="tenMoves" class="TenMoves" value="10" onclick="stepButton(value)">10 Moves</button>
-					<button id="fiftyMoves" class="FiftyMoves" value="50" onclick="stepButton(value)">50 Moves</button>
+					<span id="Label">Height</span>
+					<input class="slider1" type="range" id="heightY" min="5" onchange="rc()">
+					<span id="valuesY"></span> 
 					<br>
-					Height:
-						<span id="valuesY"></span> 
-						<input class="slider1" type="range" id="heightY" min="5" onchange="rc()">
-						<br>
-					Width:
-						<span id="valuesX"></span> 
-						<input class="slider2" type="range" id="widthX" min="5" onchange="rc()">
-							
-					<select id="interval" name="interval" onchange="rt(this.value)">
+					<span id="Label">Width</span>
+					<input class="slider2" type="range" id="widthX" min="5" onchange="rc()">
+					<span id="valuesX"></span> 
+					<select class="interval" id="interval" name="interval" onchange="rt(this.value)">
 						<option value="100">1/10 sec</option>
 						<option value="250">1/4 sec</option>
 						<option value="500">1/2 sec</option>
 						<option value="1000">1 sec</option>
 						<option value="2000">2 sec</option>
 					</select>
-					
 				<div id="bottomButtons">
-					<input id="start" type="button" value="START"> 
-					<input id="clear" type="button" value="CLEAR"> 
-					<input id="random" type="button" value="RANDOM"> 
-					<br>
+					<button id="oneMove" class="OneMove" value="1" onclick="stepButton(value)">1 Move</button>
+					<button id="fiveMoves" class="FiveMoves" value="5" onclick="stepButton(value)">5 Moves</button>
+					<button id="tenMoves" class="TenMoves" value="10" onclick="stepButton(value)">10 Moves</button>
+					<button id="fiftyMoves" class="FiftyMoves" value="50" onclick="stepButton(value)">50 Moves</button>
+					<div id="eventButtons">
+						<input id="start" type="button" value="START"> 
+						<input id="clear" type="button" value="CLEAR"> 
+						<input id="random" type="button" value="RANDOM"> 
+					</div>
 				</div>
 				</div>
 		</div>
@@ -70,12 +68,6 @@
 			<p>Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się)</p>
 			
 			<p>Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p>
-		</div>
-		<div id="MainOptions">
-			
-		</div>
-		<div id="MainLoad">
-
 		</div>
 	</body>
 </html>
