zamienilem datalist na selecta (dla applowskich urzadzen)

--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -3,70 +3,70 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
+	<title>Gra w życie Krystian Barczak, Krzysztof Dragon, Szymon Babula, Aleksander Boronowski</title>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 	<body>
 		<script src="../JS/gameoflife.js"></script>
 		<div id="MainMenu">
 			<button class="start" id="startMenu" type="button" onclick="startButton()"> START </button>
-			<button class="options" id="optionsMenu" type="button" onclick="optionsButton()"> OPTIONS </button>
 			<button class="instruction" id="instructionMenu" type="button" onclick="instructionButton()"> INSTRUCTION </button>
-			<button class="load" id="loadMenu" type="button" onclick="loadButton()"> LOAD </button>
-		</div>
+			</div>
 
 		<div id="MainGame">
 			<nav role="navigation">
-				<div id="menuToggle">
-					<input type="checkbox" />
-					<span></span>
-					<span></span>
-					<span></span>
-					<ul id="menu">
-						<li><button class="loadMenu"onclick="loadTable()">LOAD</button></li>
-						<li><button class="saveMenu"onclick="saveButton(table)">SAVE</button></li>
-						<li><button class="optionsMenu" type="button" onclick="document.getElementById('MainGame').style.display = 'none', document.getElementById('MainMenu').style.display = 'inline'">QUIT</button></li>
-					</ul>
+				<span id="optionsSpan" onclick="loadMenuButton();">Options</span>
+				<div class="ps" style="display: none" id="menuToggle">
+					<button id="loadMenuButton" class="loadMenu" onclick="loadTable();" style="display: none;">LOAD</button><br>
+						<select id="pliki" onchange="loadMenuButton();">>
+							<option value=""></option>
+						</select><br>
+						<button class="saveMenu" onclick="saveButton(table);loadFiles();">SAVE</button><br>
+						<button class="optionsMenu" type="button" 
+							onclick="document.getElementById('MainGame').style.display = 'none', 
+							document.getElementById('MainMenu').style.display = 'inline',
+							document.getElementById('menuToggle').style.display = 'none'">QUIT</button>
+						<br>
 				</div>
+				<script>
+					$("span").click(function () {
+					$(".ps").toggle("slow");
+					});
+				</script>
 			</nav>
 			<div id="gridContainer"></div>
 				<div id="FooterOptions">
-					<button id="oneMove" class="OneMove" value="1" onclick="stepButton(value)">1 Move</button>
-					<button id="fiveMoves" class="FiveMoves" value="5" onclick="stepButton(value)">5 Moves</button>
-					<button id="tenMoves" class="TenMoves" value="10" onclick="stepButton(value)">10 Moves</button>
-					<button id="fiftyMoves" class="FiftyMoves" value="50" onclick="stepButton(value)">50 Moves</button>
+					<span id="Label">Height</span>
+					<input class="slider1" type="range" id="heightY" min="5" onchange="rc()">
+					<span id="valuesY"></span> 
 					<br>
-					Height:
-						<span id="valuesY"></span> 
-						<input class="slider1" type="range" id="heightY" min="5" onchange="rc()">
-						<br>
-					Width:
-						<span id="valuesX"></span> 
-						<input class="slider2" type="range" id="widthX" min="5" onchange="rc()">
-							
-					<select id="interval" name="interval" onchange="rt(this.value)">
+					<span id="Label">Width</span>
+					<input class="slider2" type="range" id="widthX" min="5" onchange="rc()">
+					<span id="valuesX"></span> 
+					<select class="interval" id="interval" name="interval" onchange="rt(this.value)">
 						<option value="100">1/10 sec</option>
 						<option value="250">1/4 sec</option>
 						<option value="500">1/2 sec</option>
 						<option value="1000">1 sec</option>
 						<option value="2000">2 sec</option>
 					</select>
-					
-					<input id="start" type="button" value="START"> 
-					<input id="clear" type="button" value="CLEAR"> 
-					<input id="random" type="button" value="RANDOM"> 
-					<br>
+				<div id="bottomButtons">
+					<button id="oneMove" class="OneMove" value="1" onclick="stepButton(value)">1 Move</button>
+					<button id="fiveMoves" class="FiveMoves" value="5" onclick="stepButton(value)">5 Moves</button>
+					<button id="tenMoves" class="TenMoves" value="10" onclick="stepButton(value)">10 Moves</button>
+					<button id="fiftyMoves" class="FiftyMoves" value="50" onclick="stepButton(value)">50 Moves</button>
+					<div id="eventButtons">
+						<input id="start" type="button" value="START"> 
+						<input id="clear" type="button" value="CLEAR"> 
+						<input id="random" type="button" value="RANDOM"> 
+					</div>
+				</div>
 				</div>
 		</div>
-		<div id="MainInstruction">
+		<div id="MainInstruction" class="MainInstruction">
 			<p>Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się)</p>
 			
 			<p>Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p>
-		</div>
-		<div id="MainOptions">
-			
-		</div>
-		<div id="MainLoad">
-
 		</div>
 	</body>
 </html>
