--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Gra w życie Krystian Barczak, Krzysztof Dragon, Szymon Babula, Aleksander Boronowski</title>
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
-	<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body>
 		<script src="../JS/gameoflife.js"></script>
@@ -37,6 +36,7 @@
 			</nav>
 			<div id="gridContainer"></div>
 				<div id="FooterOptions">
+					
 					<span id="Label">Height</span>
 					<input class="slider1" type="range" id="heightY" min="5" onchange="rc()">
 					<span id="valuesY"></span> 
@@ -51,6 +51,7 @@
 						<option value="1000">1 sec</option>
 						<option value="2000">2 sec</option>
 					</select>
+
 				<div id="bottomButtons">
 					<button id="oneMove" class="OneMove" value="1" onclick="stepButton(value)">1 Move</button>
 					<button id="fiveMoves" class="FiveMoves" value="5" onclick="stepButton(value)">5 Moves</button>
@@ -60,7 +61,13 @@
 						<input id="start" type="button" value="START"> 
 						<input id="clear" type="button" value="CLEAR"> 
 						<input id="random" type="button" value="RANDOM"> 
+						
 					</div>
+				</div>
+				<div id="lifeRules">
+					<span id="LabelLifeRules">Life Rules:</span>
+					<span id="LabelRules">Standard</span><input type="radio" id="standardRule" name="applyRules" value="Standard" onchange="changeRules();" checked> 
+					<span id="LabelRules">Labirynt</span><input type="radio" id="customRule" name="applyRules" value="Custom"  onchange="changeRules();"> 
 				</div>
 				</div>
 		</div>
