--- a/public_html/HTML/index.html
+++ b/public_html/HTML/index.html
@@ -75,9 +75,12 @@
 				</div>
 		</div>
 		<div id="MainInstruction" class="MainInstruction">
-			<p>Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się)</p>
-			
-			<p>Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p>
+			<p>Reguła Standard:</p><p>Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się). Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p><hr/>
+			<p>Reguła Maze:</p><p> Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się). Żywa komórka z 1,2,3,4 lub 5 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p><hr/>
+			<p>Reguła High Life:</p><p> Martwa komórka, która ma 3 lub 6 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się). Żywa komórka z 2 albo 3 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p><hr/>
+			<p>Reguła Ameba:</p><p> Martwa komórka, która ma 3,5 lub 7 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się). Żywa komórka z 1,3,5 lub 8 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p><hr/>
+			<p>Reguła Koral:</p><p> Martwa komórka, która ma dokładnie 3 żywych sąsiadów, staje się żywa w następnej jednostce czasu (rodzi się). Żywa komórka z 4,5,6,7 lub 8 żywymi sąsiadami pozostaje nadal żywa; przy innej liczbie sąsiadów umiera (z „samotności” albo „zatłoczenia”)</p>
+		
 		</div>
 	</body>
 </html>
